deployment/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-pagamento-app
  namespace: backend-estabelecimento
  labels:
    app.kubernetes.io/name: backend-pagamento-app
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-pagamento-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend-pagamento-app
    spec:
      serviceAccountName: backend-pagamento-serviceaccount
      containers:
        - name: backend-pagamento-app
          image: DOCKER_IMAGE
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "256m"
              memory: "512M"
            limits:
              cpu: "512m"
              memory: "2048M"
          ports:
            - name: http-port
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http-port
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http-port
            initialDelaySeconds: 240
            periodSeconds: 15
            failureThreshold: 3
