deployment/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-pagamento-svc
  namespace: backend-estabelecimento
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: backend-pagamento-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
